Add private shared watchlist
